BACKLOG-4513 + BACKLOG-4514 + BACKLOG-4515: Add module groupId + Block installation of a module with same artifactId and different groupId

--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -30,8 +30,9 @@ siteSettings.label.language.default=Default language
 siteSettings.label.language.mandatory=Mandatory
 siteSettings.label.manageLanguages=Manage languages
 siteSettings.label.manageModules=Modules
-siteSettings.label.modules.id=ID
-siteSettings.label.modules.name=Name
+siteSettings.label.modules.groupId=Group ID
+siteSettings.label.modules.id=Module ID
+siteSettings.label.modules.name=Module Name
 siteSettings.label.modules.source=Source
 siteSettings.label.modules.type=Type
 siteSettings.label.modules.version=Version
