QA-5007 - Encoding issue in the administration https://jira.jahia.org/browse/QA-5007
Corrected RB encoding

--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -1,51 +1,50 @@
 siteSettings.groups.addMembers=Ajouter des membres
 siteSettings.groups.copy=Copier le groupe
-siteSettings.groups.create=Crï¿½er un nouveau groupe
-siteSettings.groups.edit=ï¿½diter un groupe
-siteSettings.groups.errors.create.failed=Echec de la crï¿½ation du groupe {0}.
-siteSettings.groups.errors.groupname.exists=existe dï¿½jï¿½.
-siteSettings.groups.errors.groupname.mandatory=Veuillez spï¿½cifier un nom de groupe
-siteSettings.groups.errors.groupname.syntax=Seuls les caractï¿½res (a..z, A..Z, 0..9, _, -, '{', '}') sont valides.
-siteSettings.groups.errors.groupname.unique=Ce nom de groupe doit ï¿½tre unique sur l'ensemble du site.
+siteSettings.groups.create=Créer un nouveau groupe
+siteSettings.groups.edit=Éditer un groupe
+siteSettings.groups.editMembers=Editer les membres
+siteSettings.groups.errors.create.failed=Echec de la création du groupe {0}.
+siteSettings.groups.errors.groupname.exists=existe déjà.
+siteSettings.groups.errors.groupname.mandatory=Veuillez spécifier un nom de groupe
+siteSettings.groups.errors.groupname.syntax=Seuls les caractères (a..z, A..Z, 0..9, _, -, '{', '}') sont valides.
+siteSettings.groups.errors.groupname.unique=Ce nom de groupe doit être unique sur l'ensemble du site.
 siteSettings.groups.errors.remove.failed=Echec de la suppression du groupe {0}.
 siteSettings.groups.errors.reservedGroup=Vous ne pouvez pas deleter ce groupe.
-siteSettings.groups.found=<strong>{0}</strong> groupes trouvï¿½s. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de rï¿½sultats.
-siteSettings.users.found=<strong>{0}</strong> utilisateurs trouvï¿½s. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de rï¿½sultats.
-siteSettings.groups.members.found=<strong>{0}</strong> membres de groupes trouvï¿½s. Affichage des <strong>{1}</strong> premiers.
+siteSettings.groups.found=<strong>{0}</strong> groupes trouvés. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
+siteSettings.groups.members.found=<strong>{0}</strong> membres de groupes trouvés. Affichage des <strong>{1}</strong> premiers.
 siteSettings.groups.members.showAll=Tout montrer
-siteSettings.groups.members.showAll.notice=peut ï¿½tre lent en cas de nombreux membres.
+siteSettings.groups.members.showAll.notice=peut être lent en cas de nombreux membres.
 siteSettings.groups.newMembers=Nouveaux membres
-siteSettings.groups.properties.selected=Propriï¿½tï¿½s sï¿½lectionnï¿½es
+siteSettings.groups.properties.selected=Propriétés sélectionnées
 siteSettings.groups.remove=Supprimer le groupe
-siteSettings.groups.editMembers=Editer les membres
-siteSettings.groups.remove.confirm=Ce groupe sera dï¿½finitivement supprimï¿½ du serveur.
+siteSettings.groups.remove.confirm=Ce groupe sera définitivement supprimé du serveur.
 siteSettings.groups.removeMember.confirm=Ceci retirera l''utilisateur {0} du groupe.
 siteSettings.groups.removeMembers=Supprimer ces membres
-siteSettings.groups.removeMembers.confirm=Les membres sï¿½lectionnï¿½s seront retirï¿½s du groupe.
-siteSettings.groups.removeMembers.nothingSelected=Sï¿½lectionnez les membres ï¿½ retirer du groupe.
-siteSettings.label.backToRoles=Retour aux rï¿½les
+siteSettings.groups.removeMembers.confirm=Les membres sélectionnés seront retirés du groupe.
+siteSettings.groups.removeMembers.nothingSelected=Sélectionnez les membres à retirer du groupe.
+siteSettings.label.backToGroup=Retour
+siteSettings.label.backToRoles=Retour aux rôles
 siteSettings.label.htmlFiltering=Filtrage HTML
 siteSettings.label.language=Langue
 siteSettings.label.language.active.edit=Active (Edit)
 siteSettings.label.language.active.live=Active (Live)
-siteSettings.label.language.default=Langue par dï¿½faut
+siteSettings.label.language.default=Langue par défaut
 siteSettings.label.language.mandatory=Obligatoire
 siteSettings.label.manageLanguages=Gestion des langues
 siteSettings.label.manageModules=Gestion des modules
-siteSettings.label.modules.groupId=Identifiant de groupe
 siteSettings.label.modules.id=Identifiant du module
 siteSettings.label.modules.name=Nom du module
 siteSettings.label.modules.source=Source
-siteSettings.label.backToGroup=Retour
 siteSettings.label.modules.type=Type
 siteSettings.label.modules.version=Version
-siteSettings.label.vanityURLSettings=URLs personnalisï¿½es
-siteSettings.label.wcagCompliance=Conformitï¿½ WCAG
+siteSettings.label.vanityURLSettings=URLs personnalisées
+siteSettings.label.wcagCompliance=Conformité WCAG
 siteSettings.locale.addLanguages=Ajouter des langues
-siteSettings.locale.allowsUnlistedLanguages=Autoriser les langues non listï¿½es
+siteSettings.locale.allowsUnlistedLanguages=Autoriser les langues non listées
 siteSettings.locale.availableLanguages=Langues disponibles
-siteSettings.locale.mixLanguages=Remplacer le contenu non traduit par celui de la langue par dï¿½faut
-siteSettings.manageSiteRoles=Gestion des rï¿½les de site
-siteSettings.manageSiteRoles.revokeRole.confirm=Voulez-vous rï¿½voquer le rï¿½le sï¿½lectionnï¿½ ?
-siteSettings.manageWebProjects.webProject.templateSet=Jeu de modï¿½les
-siteSettings.requiredModules=Modules nï¿½cessaires (dï¿½pendances)
+siteSettings.locale.mixLanguages=Remplacer le contenu non traduit par celui de la langue par défaut
+siteSettings.manageSiteRoles=Gestion des rôles de site
+siteSettings.manageSiteRoles.revokeRole.confirm=Voulez-vous révoquer le rôle sélectionné ?
+siteSettings.manageWebProjects.webProject.templateSet=Jeu de modèles
+siteSettings.requiredModules=Modules nécessaires (dépendances)
+siteSettings.users.found=<strong>{0}</strong> utilisateurs trouvés. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
