Labels for group management

--- a/src/main/resources/resources/JahiaSiteSettings_de.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_de.properties
@@ -2,6 +2,7 @@ siteSettings.groups.addMembers=Mitglieder hinzufügen
 siteSettings.groups.copy=Gruppe kopieren
 siteSettings.groups.create=Neue Gruppe erstellen
 siteSettings.groups.edit=Gruppe bearbeiten
+siteSettings.groups.editMembers=Mitgliedschaft bearbeiten
 siteSettings.groups.errors.create.failed=Das Erstellen der Gruppe {0} ist fehlgeschlagen.
 siteSettings.groups.errors.groupname.exists=besteht bereits.
 siteSettings.groups.errors.groupname.mandatory=Bitte geben Sie einen Gruppennamen an
@@ -21,14 +22,16 @@ siteSettings.groups.removeMember.confirm=Dies wird Mitglied {0} aus der Gruppe e
 siteSettings.groups.removeMembers=Mitglieder entfernen
 siteSettings.groups.removeMembers.confirm=Ausgewählten Mitglieder werden aus der Gruppe entfernen.
 siteSettings.groups.removeMembers.nothingSelected=Bitte wählen Sie Mitglieder aus, die aus der Gruppe entfernt werden sollen.
+siteSettings.label.backToGroup=Zurück
 siteSettings.label.htmlFiltering=HTML-Filterung
 siteSettings.label.manageLanguages=Sprachen verwalten
 siteSettings.label.manageModules=Module
 siteSettings.label.modules.type=Typ
 siteSettings.label.vanityURLSettings=URL-Mappings
 siteSettings.label.wcagCompliance=WCAG-Kompatibilität
-siteSettings.locale.mixLanguages=Nicht übersetzten Inhalte mit der Inhalten der Standardsprache ersetzen
 siteSettings.locale.addLanguages=Sprachen hinzufügen
 siteSettings.locale.availableLanguages=Verfügbare Sprachen
+siteSettings.locale.mixLanguages=Nicht übersetzten Inhalte mit der Inhalten der Standardsprache ersetzen
+siteSettings.manageSiteRoles=Site-Rechte verwalten
 siteSettings.manageWebProjects.webProject.templateSet=Vorlagensatz
 siteSettings.requiredModules=Erforderliche Module (Abhängigkeiten)
