--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -2,6 +2,7 @@ siteSettings.groups.addMembers=Add members
 siteSettings.groups.copy=Copy group
 siteSettings.groups.create=Create new group
 siteSettings.groups.edit=Edit group
+siteSettings.groups.editMembers=Edit membership
 siteSettings.groups.errors.create.failed=Creation of group {0} failed.
 siteSettings.groups.errors.groupname.exists=already exists.
 siteSettings.groups.errors.groupname.mandatory=Please specify a group name
@@ -10,7 +11,6 @@ siteSettings.groups.errors.groupname.unique=The group name should be unique with
 siteSettings.groups.errors.remove.failed=Deletion of group {0} failed.
 siteSettings.groups.errors.reservedGroup=You cannot remove that group.
 siteSettings.groups.found=<strong>{0}</strong> groups found. The first <strong>{1}</strong> are shown. Please use the search to limit the number of results.
-siteSettings.users.found=<strong>{0}</strong> users found. The first <strong>{1}</strong> are shown. Please use the search to limit the number of results.
 siteSettings.groups.members.found=<strong>{0}</strong> group members found. The first <strong>{1}</strong> are shown.
 siteSettings.groups.members.showAll=Show all
 siteSettings.groups.members.showAll.notice=can be slow in case of many group members.
@@ -22,6 +22,7 @@ siteSettings.groups.removeMember.confirm=This will remove member {0} from the gr
 siteSettings.groups.removeMembers=Remove members
 siteSettings.groups.removeMembers.confirm=Selected members will be removed from the group.
 siteSettings.groups.removeMembers.nothingSelected=Please select members to be removed from the group.
+siteSettings.label.backToGroup=Back to edit group
 siteSettings.label.htmlFiltering=HTML filtering
 siteSettings.label.language=Language
 siteSettings.label.language.active.edit=Active (Edit)
@@ -38,12 +39,11 @@ siteSettings.label.modules.type=Type
 siteSettings.label.modules.version=Version
 siteSettings.label.vanityURLSettings=Vanity URL dashboard
 siteSettings.label.wcagCompliance=WCAG compliance
-siteSettings.locale.mixLanguages=Replace untranslated content with the default language content
-siteSettings.locale.allowsUnlistedLanguages=Allow to use unlisted languages
 siteSettings.locale.addLanguages=Add languages
+siteSettings.locale.allowsUnlistedLanguages=Allow to use unlisted languages
 siteSettings.locale.availableLanguages=Available languages
+siteSettings.locale.mixLanguages=Replace untranslated content with the default language content
 siteSettings.manageSiteRoles=Manage site roles
 siteSettings.manageWebProjects.webProject.templateSet=Template set
 siteSettings.requiredModules=Required dependent modules
-siteSettings.label.backToGroup=Back to edit group
-siteSettings.groups.editMembers=Edit members
+siteSettings.users.found=<strong>{0}</strong> users found. The first <strong>{1}</strong> are shown. Please use the search to limit the number of results.
