SiteSettings RB update

--- a/src/main/resources/resources/JahiaSiteSettings_de.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_de.properties
@@ -24,7 +24,7 @@ siteSettings.groups.removeMembers.confirm=Ausgewählten Mitglieder werden aus der
 siteSettings.groups.removeMembers.nothingSelected=Bitte wählen Sie Mitglieder aus, die aus der Gruppe entfernt werden sollen.
 siteSettings.label.backToGroup=Zurück
 siteSettings.label.htmlFiltering=HTML-Filterung
-siteSettings.label.manageLanguages=Sprachen verwalten
+siteSettings.label.manageLanguages=Sprachen
 siteSettings.label.manageModules=Module
 siteSettings.label.modules.type=Typ
 siteSettings.label.vanityURLSettings=URL-Mappings
@@ -32,6 +32,6 @@ siteSettings.label.wcagCompliance=WCAG-Kompatibilität
 siteSettings.locale.addLanguages=Sprachen hinzufügen
 siteSettings.locale.availableLanguages=Verfügbare Sprachen
 siteSettings.locale.mixLanguages=Nicht übersetzten Inhalte mit der Inhalten der Standardsprache ersetzen
-siteSettings.manageSiteRoles=Site-Rechte verwalten
+siteSettings.manageSiteRoles=Site-Rechte
 siteSettings.manageWebProjects.webProject.templateSet=Vorlagensatz
 siteSettings.requiredModules=Erforderliche Module (Abhängigkeiten)
