--- a/src/main/resources/resources/JahiaSiteSettings_it.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_it.properties
@@ -10,7 +10,7 @@ siteSettings.groups.newMembers=Nuovi membri
 siteSettings.groups.remove=Rimuovi gruppo
 siteSettings.groups.remove.confirm=Questo gruppo sarà definitivamente rimosso dal sito.
 siteSettings.groups.removeMembers=Rimuovi membri
-siteSettings.label.manageLanguages=Gestisci lingue
+siteSettings.label.manageLanguages=Lingue
 siteSettings.label.wcagCompliance=Conformità WCAG
 siteSettings.locale.mixLanguages=Sostituire il contenuto non convertiti utilizzando il contenuto della lingua predefinita
 siteSettings.locale.addLanguages=Aggiungi lingue
