--- a/src/main/resources/resources/JahiaSiteSettings_pt.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_pt.properties
@@ -10,7 +10,7 @@ siteSettings.groups.newMembers=Os novos membros
 siteSettings.groups.remove=Remover grupo
 siteSettings.groups.remove.confirm=O grupo será definitivamente removido do servidor.
 siteSettings.groups.removeMembers=Remover membros
-siteSettings.label.manageLanguages=Gerir idiomas
+siteSettings.label.manageLanguages=Idiomas
 siteSettings.label.wcagCompliance=Conformidade WCAG
 siteSettings.locale.addLanguages=dicionar idiomas
 siteSettings.locale.availableLanguages=Idiomas disponíveis
