--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -29,7 +29,7 @@ siteSettings.label.language.active.edit=Active (Edit)
 siteSettings.label.language.active.live=Active (Live)
 siteSettings.label.language.default=Default language
 siteSettings.label.language.mandatory=Mandatory
-siteSettings.label.manageLanguages=Manage languages
+siteSettings.label.manageLanguages=Languages
 siteSettings.label.manageModules=Modules
 siteSettings.label.modules.groupId=Group ID
 siteSettings.label.modules.id=Module ID
@@ -43,7 +43,9 @@ siteSettings.locale.addLanguages=Add languages
 siteSettings.locale.allowsUnlistedLanguages=Allow to use unlisted languages
 siteSettings.locale.availableLanguages=Available languages
 siteSettings.locale.mixLanguages=Replace untranslated content with the default language content
-siteSettings.manageSiteRoles=Manage site roles
+siteSettings.manageSiteRoles=Site roles
 siteSettings.manageWebProjects.webProject.templateSet=Template set
 siteSettings.requiredModules=Required dependent modules
 siteSettings.users.found=<strong>{0}</strong> users found. The first <strong>{1}</strong> are shown. Please use the search to limit the number of results.
+siteSettings.label.backToRoles=Back to roles
+siteSettings.manageSiteRoles.revokeRole.confirm=Do you want to revoke selected role ?
