--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -3,23 +3,23 @@ siteSettings.groups.copy=Copier le groupe
 siteSettings.groups.create=Créer un nouveau groupe
 siteSettings.groups.edit=Éditer un groupe
 siteSettings.groups.editMembers=Editer les membres
-siteSettings.groups.errors.create.failed=Echec de la création du groupe {0}.
+siteSettings.groups.errors.create.failed=La création du groupe {0} a échoué.
 siteSettings.groups.errors.groupname.exists=existe déjà.
 siteSettings.groups.errors.groupname.mandatory=Veuillez spécifier un nom de groupe
 siteSettings.groups.errors.groupname.syntax=Seuls les caractères (a..z, A..Z, 0..9, _, -, '{', '}') sont valides.
 siteSettings.groups.errors.groupname.unique=Ce nom de groupe doit être unique sur l'ensemble du site.
-siteSettings.groups.errors.remove.failed=Echec de la suppression du groupe {0}.
-siteSettings.groups.errors.reservedGroup=Vous ne pouvez pas deleter ce groupe.
+siteSettings.groups.errors.remove.failed=La suppression du groupe {0} a échoué.
+siteSettings.groups.errors.reservedGroup=Vous ne pouvez pas supprimer ce groupe.
 siteSettings.groups.found=<strong>{0}</strong> groupes trouvés. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
 siteSettings.groups.members.found=<strong>{0}</strong> membres de groupes trouvés. Affichage des <strong>{1}</strong> premiers.
 siteSettings.groups.members.showAll=Tout montrer
-siteSettings.groups.members.showAll.notice=peut être lent en cas de nombreux membres.
+siteSettings.groups.members.showAll.notice=peut être lent si le groupe contient de nombreux membres.
 siteSettings.groups.newMembers=Nouveaux membres
 siteSettings.groups.properties.selected=Propriétés sélectionnées
 siteSettings.groups.remove=Supprimer le groupe
 siteSettings.groups.remove.confirm=Ce groupe sera définitivement supprimé du serveur.
 siteSettings.groups.removeMember.confirm=Ceci retirera l''utilisateur {0} du groupe.
-siteSettings.groups.removeMembers=Supprimer ces membres
+siteSettings.groups.removeMembers=Retirer ces membres
 siteSettings.groups.removeMembers.confirm=Les membres sélectionnés seront retirés du groupe.
 siteSettings.groups.removeMembers.nothingSelected=Sélectionnez les membres à retirer du groupe.
 siteSettings.label.backToGroup=Retour
@@ -30,9 +30,9 @@ siteSettings.label.language.active.edit=Active (Edit)
 siteSettings.label.language.active.live=Active (Live)
 siteSettings.label.language.default=Langue par défaut
 siteSettings.label.language.mandatory=Obligatoire
-siteSettings.label.manageLanguages=Gestion des langues
-siteSettings.label.manageModules=Gestion des modules
-siteSettings.label.modules.id=Identifiant du module
+siteSettings.label.manageLanguages=Langues
+siteSettings.label.manageModules=Modules
+siteSettings.label.modules.id=ID module
 siteSettings.label.modules.name=Nom du module
 siteSettings.label.modules.source=Source
 siteSettings.label.modules.type=Type
@@ -43,8 +43,9 @@ siteSettings.locale.addLanguages=Ajouter des langues
 siteSettings.locale.allowsUnlistedLanguages=Autoriser les langues non listées
 siteSettings.locale.availableLanguages=Langues disponibles
 siteSettings.locale.mixLanguages=Remplacer le contenu non traduit par celui de la langue par défaut
-siteSettings.manageSiteRoles=Gestion des rôles de site
+siteSettings.manageSiteRoles=Rôles de site
 siteSettings.manageSiteRoles.revokeRole.confirm=Voulez-vous révoquer le rôle sélectionné ?
 siteSettings.manageWebProjects.webProject.templateSet=Jeu de modèles
 siteSettings.requiredModules=Modules nécessaires (dépendances)
 siteSettings.users.found=<strong>{0}</strong> utilisateurs trouvés. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
+siteSettings.label.modules.groupId=ID groupe
