Consistency, typos/spelling, French translations RB update (1)

--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -12,8 +12,8 @@ siteSettings.groups.errors.remove.failed=La suppression du groupe {0} a échoué.
 siteSettings.groups.errors.reservedGroup=Vous ne pouvez pas supprimer ce groupe.
 siteSettings.groups.found=<strong>{0}</strong> groupes trouvés. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
 siteSettings.groups.members.found=<strong>{0}</strong> membres de groupes trouvés. Affichage des <strong>{1}</strong> premiers.
-siteSettings.groups.members.showAll=Tout montrer
-siteSettings.groups.members.showAll.notice=peut être lent si le groupe contient de nombreux membres.
+siteSettings.groups.members.showAll=Tout afficher
+siteSettings.groups.members.showAll.notice=Cette opération peut être lente si le groupe contient beaucoup de membres.
 siteSettings.groups.newMembers=Nouveaux membres
 siteSettings.groups.properties.selected=Propriétés sélectionnées
 siteSettings.groups.remove=Supprimer le groupe
