Consistency, typos/spelling, French translations RB update (4)

--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -22,7 +22,7 @@ siteSettings.groups.removeMember.confirm=Ceci retirera l''utilisateur {0} du gro
 siteSettings.groups.removeMembers=Retirer ces membres
 siteSettings.groups.removeMembers.confirm=Les membres sélectionnés seront retirés du groupe.
 siteSettings.groups.removeMembers.nothingSelected=Sélectionnez les membres à retirer du groupe.
-siteSettings.label.backToGroup=Retour
+siteSettings.label.backToGroup=Retour au groupe
 siteSettings.label.backToRoles=Retour aux rôles
 siteSettings.label.htmlFiltering=Filtrage HTML
 siteSettings.label.language=Langue
@@ -32,7 +32,7 @@ siteSettings.label.language.default=Langue par défaut
 siteSettings.label.language.mandatory=Obligatoire
 siteSettings.label.manageLanguages=Langues
 siteSettings.label.manageModules=Modules
-siteSettings.label.modules.id=ID module
+siteSettings.label.modules.id=module ID
 siteSettings.label.modules.name=Nom du module
 siteSettings.label.modules.source=Source
 siteSettings.label.modules.type=Type
