RB update + sitesettings menu update (repository.xml)

--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -37,7 +37,7 @@ siteSettings.label.modules.name=Nom du module
 siteSettings.label.modules.source=Source
 siteSettings.label.modules.type=Type
 siteSettings.label.modules.version=Version
-siteSettings.label.vanityURLSettings=URLs personnalisées
+siteSettings.label.vanityURLSettings=URL personnalisées
 siteSettings.label.wcagCompliance=Conformité WCAG
 siteSettings.locale.addLanguages=Ajouter des langues
 siteSettings.locale.allowsUnlistedLanguages=Autoriser les langues non listées
@@ -49,3 +49,5 @@ siteSettings.manageWebProjects.webProject.templateSet=Jeu de modèles
 siteSettings.requiredModules=Modules nécessaires (dépendances)
 siteSettings.users.found=<strong>{0}</strong> utilisateurs trouvés. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
 siteSettings.label.modules.groupId=ID groupe
+siteSettings.label.linkchecker=Vérificateur de liens
+siteSettings.label.manageGroups=Groupes
