RB capitalization consistency changes

--- a/src/main/resources/resources/JahiaSiteSettings_de.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_de.properties
@@ -35,4 +35,4 @@ siteSettings.locale.mixLanguages=Nicht übersetzten Inhalte mit der Inhalten der 
 siteSettings.manageSiteRoles=Site-Rechte
 siteSettings.manageWebProjects.webProject.templateSet=Vorlagensatz
 siteSettings.requiredModules=Erforderliche Module (Abhängigkeiten)
-siteSettings.label.manageGroups=Groups
+siteSettings.label.manageGroups=Gruppen
