--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -49,3 +49,4 @@ siteSettings.requiredModules=Required dependent modules
 siteSettings.users.found=<strong>{0}</strong> users found. The first <strong>{1}</strong> are shown. Please use the search to limit the number of results.
 siteSettings.label.backToRoles=Back to roles
 siteSettings.manageSiteRoles.revokeRole.confirm=Do you want to revoke selected role ?
+siteSettings.label.manageGroups=Groups
