QA-5988 - Pagination missing in server admin/users UI https://jira.jahia.org/browse/QA-5988
Introduce display limit for users in server settings.
Set the limit of users, displayed by default, to 100.

--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -10,7 +10,8 @@ siteSettings.groups.errors.groupname.syntax=Only characters (a..z, A..Z, 0..9, _
 siteSettings.groups.errors.groupname.unique=The group name should be unique within the site.
 siteSettings.groups.errors.remove.failed=Deletion of group {0} failed.
 siteSettings.groups.errors.reservedGroup=You cannot remove that group.
-siteSettings.groups.found=<strong>{0}</strong> groups found. The first <strong>{1}</strong> are shown. Please use the search to limit the number of results.
+siteSettings.groups.found=<strong>{0}</strong> group(s) found.
+siteSettings.groups.found.limit=The first <strong>{0}</strong> are shown. Please use the search to limit the number of results.
 siteSettings.groups.members.found=<strong>{0}</strong> group members found. The first <strong>{1}</strong> are shown.
 siteSettings.groups.members.showAll=Show all
 siteSettings.groups.members.showAll.notice=can be slow in case of many group members.
@@ -23,12 +24,14 @@ siteSettings.groups.removeMembers=Remove members
 siteSettings.groups.removeMembers.confirm=Selected members will be removed from the group.
 siteSettings.groups.removeMembers.nothingSelected=Please select members to be removed from the group.
 siteSettings.label.backToGroup=Back to edit group
+siteSettings.label.backToRoles=Back to roles
 siteSettings.label.htmlFiltering=HTML filtering
 siteSettings.label.language=Language
 siteSettings.label.language.active.edit=Active (Edit)
 siteSettings.label.language.active.live=Active (Live)
 siteSettings.label.language.default=Default language
 siteSettings.label.language.mandatory=Mandatory
+siteSettings.label.manageGroups=Groups
 siteSettings.label.manageLanguages=Languages
 siteSettings.label.manageModules=Modules
 siteSettings.label.modules.groupId=Group ID
@@ -44,9 +47,7 @@ siteSettings.locale.allowsUnlistedLanguages=Allow to use unlisted languages
 siteSettings.locale.availableLanguages=Available languages
 siteSettings.locale.mixLanguages=Replace untranslated content with the default language content
 siteSettings.manageSiteRoles=Site roles
+siteSettings.manageSiteRoles.revokeRole.confirm=Do you want to revoke selected role ?
 siteSettings.manageWebProjects.webProject.templateSet=Template set
 siteSettings.requiredModules=Required dependent modules
 siteSettings.users.found=<strong>{0}</strong> users found. The first <strong>{1}</strong> are shown. Please use the search to limit the number of results.
-siteSettings.label.backToRoles=Back to roles
-siteSettings.manageSiteRoles.revokeRole.confirm=Do you want to revoke selected role ?
-siteSettings.label.manageGroups=Groups
