--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -10,7 +10,8 @@ siteSettings.groups.errors.groupname.syntax=Seuls les caractères (a..z, A..Z, 0.
 siteSettings.groups.errors.groupname.unique=Ce nom de groupe doit être unique sur l'ensemble du site.
 siteSettings.groups.errors.remove.failed=La suppression du groupe {0} a échoué.
 siteSettings.groups.errors.reservedGroup=Vous ne pouvez pas supprimer ce groupe.
-siteSettings.groups.found=<strong>{0}</strong> groupes trouvés. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
+siteSettings.groups.found=<strong>{0}</strong> groupe(s) trouvés.
+siteSettings.groups.found.limit=Affichage des <strong>{0}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
 siteSettings.groups.members.found=<strong>{0}</strong> membres de groupes trouvés. Affichage des <strong>{1}</strong> premiers.
 siteSettings.groups.members.showAll=Tout afficher
 siteSettings.groups.members.showAll.notice=Cette opération peut être lente si le groupe contient beaucoup de membres.
@@ -30,8 +31,10 @@ siteSettings.label.language.active.edit=Active (Edit)
 siteSettings.label.language.active.live=Active (Live)
 siteSettings.label.language.default=Langue par défaut
 siteSettings.label.language.mandatory=Obligatoire
+siteSettings.label.manageGroups=Groupes
 siteSettings.label.manageLanguages=Langues
 siteSettings.label.manageModules=Modules
+siteSettings.label.modules.groupId=ID groupe
 siteSettings.label.modules.id=module ID
 siteSettings.label.modules.name=Nom du module
 siteSettings.label.modules.source=Source
@@ -48,5 +51,3 @@ siteSettings.manageSiteRoles.revokeRole.confirm=Voulez-vous révoquer le rôle sél
 siteSettings.manageWebProjects.webProject.templateSet=Jeu de modèles
 siteSettings.requiredModules=Modules nécessaires (dépendances)
 siteSettings.users.found=<strong>{0}</strong> utilisateurs trouvés. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
-siteSettings.label.modules.groupId=ID groupe
-siteSettings.label.manageGroups=Groupes
