--- a/src/main/resources/resources/JahiaSiteSettings_de.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_de.properties
@@ -10,7 +10,8 @@ siteSettings.groups.errors.groupname.syntax=Sie können nur die Zeichen (a..z, A.
 siteSettings.groups.errors.groupname.unique=Der Gruppenname sollte auf der Site eindeutig sein.
 siteSettings.groups.errors.remove.failed=Das Löschen der Gruppe {0} ist fehlgeschlagen.
 siteSettings.groups.errors.reservedGroup=Sie können diese Gruppe nicht entfernen.
-siteSettings.groups.found=<strong>{0}</strong> Gruppen gefunden. Die ersten <strong>{1}</strong> werden angezeigt. Verwenden Sie bitte die Suche um die Anzahl der Ergebnisse einzuschränken.
+siteSettings.groups.found=<strong>{0}</strong> Gruppe(n) gefunden.
+siteSettings.groups.found.limit=Die ersten <strong>{0}</strong> werden angezeigt. Verwenden Sie bitte die Suche um die Anzahl der Ergebnisse einzuschränken.
 siteSettings.groups.members.found=<strong>{0}</strong> Gruppenmitglieder gefunden. Die ersten <strong>{1}</strong> werden angezeigt.
 siteSettings.groups.members.showAll=Alle anzeigen
 siteSettings.groups.members.showAll.notice=kann langsam sein im Falle vieler Gruppenmitglieder.
@@ -24,6 +25,7 @@ siteSettings.groups.removeMembers.confirm=Ausgewählten Mitglieder werden aus der
 siteSettings.groups.removeMembers.nothingSelected=Bitte wählen Sie Mitglieder aus, die aus der Gruppe entfernt werden sollen.
 siteSettings.label.backToGroup=Zurück
 siteSettings.label.htmlFiltering=HTML-Filterung
+siteSettings.label.manageGroups=Gruppen
 siteSettings.label.manageLanguages=Sprachen
 siteSettings.label.manageModules=Module
 siteSettings.label.modules.type=Typ
@@ -35,4 +37,3 @@ siteSettings.locale.mixLanguages=Nicht übersetzten Inhalte mit der Inhalten der 
 siteSettings.manageSiteRoles=Site-Rechte
 siteSettings.manageWebProjects.webProject.templateSet=Vorlagensatz
 siteSettings.requiredModules=Erforderliche Module (Abhängigkeiten)
-siteSettings.label.manageGroups=Gruppen
