QA-6355 : add a comment when activating a mandatory language

--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -45,6 +45,7 @@ siteSettings.label.wcagCompliance=WCAG compliance
 siteSettings.locale.addLanguages=Add languages
 siteSettings.locale.allowsUnlistedLanguages=Allow to use unlisted languages
 siteSettings.locale.availableLanguages=Available languages
+siteSettings.locale.mandatory.warning=If you set a mandatory language, all your internationalized live contents will not be available until you fill that language.
 siteSettings.locale.mixLanguages=Replace untranslated content with the default language content
 siteSettings.manageSiteRoles=Site roles
 siteSettings.manageSiteRoles.revokeRole.confirm=Do you want to revoke selected role ?
