--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -45,6 +45,7 @@ siteSettings.label.wcagCompliance=Conformité WCAG
 siteSettings.locale.addLanguages=Ajouter des langues
 siteSettings.locale.allowsUnlistedLanguages=Autoriser les langues non listées
 siteSettings.locale.availableLanguages=Langues disponibles
+siteSettings.locale.mandatory.warning=Si vous ajoutez une langue obligatoire, tous les contenus internationalisés ne seront plus disponible jusqu'a ce que le contenu dans cette langue soit renseigné.
 siteSettings.locale.mixLanguages=Remplacer le contenu non traduit par celui de la langue par défaut
 siteSettings.manageSiteRoles=Rôles de site
 siteSettings.manageSiteRoles.revokeRole.confirm=Voulez-vous révoquer le rôle sélectionné ?
