BACKLOG-4823: Add users site settings

--- a/src/main/resources/resources/JahiaSiteSettings_de.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_de.properties
@@ -37,3 +37,34 @@ siteSettings.locale.mixLanguages=Nicht übersetzten Inhalte mit der Inhalten der 
 siteSettings.manageSiteRoles=Site-Rechte
 siteSettings.manageWebProjects.webProject.templateSet=Vorlagensatz
 siteSettings.requiredModules=Erforderliche Module (Abhängigkeiten)
+siteSettings.manageUsers=Benutzer verwalten
+siteSettings.user.create=Neuen Benutzer erstellen
+siteSettings.user.definitivelyRemove=Der oben genannte Benutzer wird endgültig vom Server entfernt.
+siteSettings.user.definitivelyRemove.files=Alle Benutzer-Daten und Benutzer-Dateien werden auch gelöscht.
+siteSettings.user.definitivelyRemove.readOnly=Der Benutzer kann nicht entfernt werden (Read-Only Anbieter).
+siteSettings.user.edit=Eigenschaften des ausgewählten Benutzers bearbeiten/anzeigen
+siteSettings.user.edit.errors.password=Fehler beim Aktualisieren des Passworts
+siteSettings.user.edit.errors.property=Fehler bei der Änderungen im Feld {0}
+siteSettings.user.edit.password.no.change=keine Änderungen, wenn leer gelassen
+siteSettings.user.edit.successful=Benutzerdaten wurden erfolgreich geändert
+siteSettings.user.emailNotifications=E-Mail Benachrichtigungen deaktivieren
+siteSettings.user.errors.email=Geben Sie eine gültige E-Mail-Adresse ein.
+siteSettings.user.errors.password.mandatory=Bitte geben Sie ein Passwort ein.
+siteSettings.user.errors.password.not.matching=Die Passwortbestätigung stimmt nicht mit dem Passwort überein. Versuchen Sie es nochmal.
+siteSettings.user.errors.username.exist=besteht bereits
+siteSettings.user.errors.username.mandatory=Bitte geben Sie einen Benutzernamen ein.
+siteSettings.user.errors.username.syntax=Benutzernamen dürfen nur die Zeichen (a..z, A..Z, 0..9, _, -, ., @, '{', '}') enthalten.
+siteSettings.user.groupList=Gruppenliste
+siteSettings.user.preferredLanguage=Bevorzugte Sprache
+siteSettings.user.profile=Profil
+siteSettings.user.properties.selected=Ausgewählte Eigenschaften
+siteSettings.user.remove=Ausgewählte benutzer entfernen
+siteSettings.user.remove.successful=Erfolgreich entfernt.
+siteSettings.user.remove.unsuccessful=Der Benutzer konnte nicht entfernt werden.
+siteSettings.user.search.found=<strong>{0}</strong> Benutzer gefunden.
+siteSettings.user.search.found.limit=Die ersten <strong>{0}</strong> Benutzer werden angezeigt. Verwenden Sie bitte die Suche um die Anzahl der Ergebnisse einzuschränken.
+siteSettings.user.search.no.result=Keine Benutzer gefunden.
+siteSettings.user.search.result=Suchergebnisse
+siteSettings.user.select.one=Bitte wählen Sie einen Benutzer aus.
+siteSettings.users.bulk.create=Mehrere Benutzer anlegen
+siteSettings.users.bulk.user.creation.successful=Benutzer <span style="font:bold;">{0}</span> wurde erfolgreich angelegt
