--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -51,4 +51,48 @@ siteSettings.manageSiteRoles=Site roles
 siteSettings.manageSiteRoles.revokeRole.confirm=Do you want to revoke selected role ?
 siteSettings.manageWebProjects.webProject.templateSet=Template set
 siteSettings.requiredModules=Required dependent modules
+siteSettings.manageUsers=Users
+siteSettings.user.create=Create new user
+siteSettings.user.create.unsuccessful=Errors while creating user. Please check the logs or ask an administrator to check the logs.
+siteSettings.user.definitivelyRemove=The above user will be permanently removed from the server.
+siteSettings.user.definitivelyRemove.files=All the data and files of the user will be also deleted.
+siteSettings.user.definitivelyRemove.readOnly=The user cannot be removed (read-only provider).
+siteSettings.user.edit=Edit/View selected user properties
+siteSettings.user.edit.errors.password=Error while updating password
+siteSettings.user.edit.errors.property=Error while updating field {0}
+siteSettings.user.edit.password.changed=Password changed
+siteSettings.user.edit.password.no.change=no changes if left blank
+siteSettings.user.edit.successful=User data updated successfully
+siteSettings.user.emailNotifications=Disable e-mail notifications
+siteSettings.user.errors.email=Please enter valid e-mail address.
+siteSettings.user.errors.password.mandatory=Please specify a password.
+siteSettings.user.errors.password.not.matching=Password confirmation does not match. Please try again.
+siteSettings.user.errors.username.exist=already exists
+siteSettings.user.errors.username.mandatory=Please specify a user name.
+siteSettings.user.errors.username.syntax=only characters (a..z, A..Z, 0..9, _, -, ., @, '{', '}') are valid for the user name.
+siteSettings.user.groupList=Group list
+siteSettings.user.groups.list=Membership list
+siteSettings.user.password=Password Update
+siteSettings.user.preferredLanguage=Preferred language
+siteSettings.user.profile=Profile
+siteSettings.user.properties.selected=Selected properties
+siteSettings.user.remove=Remove selected users
+siteSettings.user.remove.successful=Successfully removed {0}.
+siteSettings.user.remove.unsuccessful=Couldn't remove user {0}.
+siteSettings.user.search.found=<strong>{0}</strong> user(s) found.
+siteSettings.user.search.found.limit=The first <strong>{0}</strong> users are shown. Please use the search to limit the number of results.
+siteSettings.user.search.renoved.administrators=<strong>{0}</strong> administrator users are not displayed.
+siteSettings.user.search.renoved.administrator=<strong>{0}</strong> administrator user is not displayed.
+siteSettings.user.search.no.result=No users found.
+siteSettings.user.search.result=Search results
+siteSettings.user.select.one=Please select at least one user.
+siteSettings.users.batch.file.format=File format must include a header line with at minimum the columns j:nodename (username) and j:password. You can include any supported user properties as values. Example:<br/>j:nodename,j:password,j:firstName,j:lastName<br/>steven,steven1234,Steven,ACME
+siteSettings.users.bulk.create=Bulk create users
+siteSettings.users.bulk.delete=Bulk delete Users
+siteSettings.users.bulk.errors.missing.mandatory=The uploaded file is missing either <span style="font:bold;">{0}</span> or <span style="font:bold;">{1}</span> mandatory columns
+siteSettings.users.bulk.errors.user.creation.failed=Could not create user <span style="font:bold;">{0}</span>.
+siteSettings.users.bulk.errors.user.skipped=Skipping user <span style="font:bold;">{0}</span> due to username not following the name syntax (only characters (a..z, A..Z, 0..9, _, -, ., @, '{', '}') are valid for the user name).
+siteSettings.users.bulk.errors.user.skipped.password=Skipping user <span style="font:bold;">{0}</span> due to error following password policy.<br/>Broken rules:<br/>{1}
+siteSettings.users.bulk.remove.switch=Toggle bulk delete mode
+siteSettings.users.bulk.user.creation.successful=Successfully created user <span style="font:bold;">{0}</span>
 siteSettings.users.found=<strong>{0}</strong> users found. The first <strong>{1}</strong> are shown. Please use the search to limit the number of results.
