--- a/src/main/resources/resources/JahiaSiteSettings_es.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_es.properties
@@ -16,3 +16,17 @@ siteSettings.locale.addLanguages=Agregar idiomas
 siteSettings.locale.availableLanguages=Idiomas disponibles
 siteSettings.label.wcagCompliance=Compatibilidad con WCAG
 siteSettings.manageWebProjects.webProject.templateSet=Conjunto de plantillas
+siteSettings.manageUsers=Administrar usuarios
+siteSettings.user.create=Crear usuario nuevo
+siteSettings.user.definitivelyRemove=El usuario anterior será quitado definitivamente del servidor.
+siteSettings.user.edit=Modificar/Ver propiedades de usuario seleccionado
+siteSettings.user.edit.password.no.change=sin cambios si se deja en blanco
+siteSettings.user.errors.email=Escriba una dirección de correo electrónico válida.
+siteSettings.user.errors.password.not.matching=La confirmación de la contraseña no coincide. Vuelva a intentarlo.
+siteSettings.user.errors.username.exist=ya existe
+siteSettings.user.errors.username.mandatory=Especifique un nombre de usuario.
+siteSettings.user.errors.username.syntax=sólo los caracteres (a..z, A..Z, 0..9, _, -, ., @, '{', '}') son válidos para el nombre de usuario.
+siteSettings.user.groupList=Lista de grupos
+siteSettings.user.remove=Quitar usuarios seleccionados
+siteSettings.user.remove.successful=Quitado correctamente.
+siteSettings.user.remove.unsuccessful=No se pudo quitar al usuario.
