--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -47,8 +47,49 @@ siteSettings.locale.allowsUnlistedLanguages=Autoriser les langues non listées
 siteSettings.locale.availableLanguages=Langues disponibles
 siteSettings.locale.mandatory.warning=Si vous ajoutez une langue obligatoire, tous les contenus internationalisés ne seront plus disponible jusqu'a ce que le contenu dans cette langue soit renseigné.
 siteSettings.locale.mixLanguages=Remplacer le contenu non traduit par celui de la langue par défaut
+siteSettings.manageUsers=Utilisateurs
 siteSettings.manageSiteRoles=Rôles de site
 siteSettings.manageSiteRoles.revokeRole.confirm=Voulez-vous révoquer le rôle sélectionné ?
 siteSettings.manageWebProjects.webProject.templateSet=Jeu de modèles
 siteSettings.requiredModules=Modules nécessaires (dépendances)
+siteSettings.user.create=Créer un nouvel utilisateur
+siteSettings.user.create.unsuccessful=Erreurs lors de la création de l'utilisateur. Veuillez vérifier les logs ou les faire vérifier par un administrateur.
+siteSettings.user.definitivelyRemove=L'utilisateur suivant sera définitivement supprimé du serveur.
+siteSettings.user.definitivelyRemove.files=Toutes les données et fichiers de l'utilisateur seront également supprimés.
+siteSettings.user.definitivelyRemove.readOnly=L'utilisateur ne peut pas être supprimé (lecture seule).
+siteSettings.user.edit=Modifier/Afficher les propriétés de l'utilisateur sélectionné
+siteSettings.user.edit.errors.password=Erreur lors de la modification du mot de passe
+siteSettings.user.edit.errors.property=Erreur lors de la modification du champ {0}
+siteSettings.user.edit.password.changed=Mot de passe modifié
+siteSettings.user.edit.password.no.change=ne sera pas modifié si ce champ reste vide
+siteSettings.user.edit.successful=Utilisateur modifié avec succès
+siteSettings.user.emailNotifications=Désactiver les notifications par e-mail
+siteSettings.user.errors.email=Veuillez entrer une adresse e-mail valide.
+siteSettings.user.errors.password.mandatory=Veuillez spécifier un mot de passe.
+siteSettings.user.errors.password.not.matching=Le mot de passe et le mot de passe de confirmation ne correspondent pas. Veuillez réessayer.
+siteSettings.user.errors.username.exist=existe déjà
+siteSettings.user.errors.username.mandatory=Veuillez spécifier un nom d'utilisateur.
+siteSettings.user.errors.username.syntax=pour le nom de l'utilisateur, seuls les caractères (a..z, A..Z, 0..9, _, -, ., @, '{', '}') sont autorisés.
+siteSettings.user.groupList=Liste des groupes
+siteSettings.user.groups.list=Liste des groupes dont l'utilisateur est membre
+siteSettings.user.password=Changer le mot de passe
+siteSettings.user.preferredLanguage=Langue de préférence
+siteSettings.user.profile=Profil
+siteSettings.user.properties.selected=Propriétés sélectionnées
+siteSettings.user.remove=Supprimer les utilisateurs sélectionnés
+siteSettings.user.remove.successful=Supprimé avec succès.
+siteSettings.user.remove.unsuccessful=Impossible de supprimer l'utilisateur.
+siteSettings.user.search.found=<strong>{0}</strong> utilisateur(s) trouvés.
+siteSettings.user.search.found.limit=Affichage des <strong>{0}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
+siteSettings.user.search.no.result=Pas d'utilisateur trouvé.
+siteSettings.user.search.result=Résultats de la recherche
+siteSettings.user.select.one=Veuillez sélectionner au moins un utilisateur.
+siteSettings.users.batch.file.format=Le format du fichier doit inclure une ligne d'en-tête avec au minimum les colonnes j:nodename (nom d'utilisateur) et j:password. Vous pouvez inclure les valeurs de n'importe quelle propriété utilisateur. Exemple :<br/>j:nodename,j:password,j:firstName,j:lastName<br/>steven,steven1234,Steven,ACME
+siteSettings.users.bulk.create=Création d'utilisateurs en bloc
+siteSettings.users.bulk.errors.missing.mandatory=Il manque dans le fichier envoyé sur le serveur au moins une des colonnes obligatoires <span style="font:bold;">{0}</span> et <span style="font:bold;">{1}</span>
+siteSettings.users.bulk.errors.user.creation.failed=Impossible de créer l'utilisateur <span style="font:bold;">{0}</span>.
+siteSettings.users.bulk.errors.user.skipped=L'utilisateur <span style="font:bold;">{0}</span> a été ignoré car la syntaxe de son nom est incorrecte (seuls les caractères (a..z, A..Z, 0..9, _, -, ., @, '{', '}') sont valides).
+siteSettings.users.bulk.errors.user.skipped.password=L'utilisateur <span style="font:bold;">{0}</span> a été ignoré à cause d'erreurs concernant le mot de passe.<br/>Règles non-respectées :<br/>{1}
+siteSettings.users.bulk.remove.switch=Basculer en mode suppression multiple
+siteSettings.users.bulk.user.creation.successful=Utilisateur <span style="font:bold;">{0}</span> créé avec succès
 siteSettings.users.found=<strong>{0}</strong> utilisateurs trouvés. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
