--- a/src/main/resources/resources/JahiaSiteSettings_pt.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_pt.properties
@@ -15,3 +15,17 @@ siteSettings.label.wcagCompliance=Conformidade WCAG
 siteSettings.locale.addLanguages=dicionar idiomas
 siteSettings.locale.availableLanguages=Idiomas disponíveis
 siteSettings.locale.mixLanguages=Substituir o conteúdo não traduzido usando o conteúdo da língua padrão
+siteSettings.manageUsers=Gerir usuários
+siteSettings.user.create=Criar novo usuário
+siteSettings.user.definitivelyRemove=O usuário acima será definitivamente removido do servidor
+siteSettings.user.edit=Editar/Visualizar propriedades do usuário selecionado
+siteSettings.user.edit.password.no.change=nenhuma alteração se for deixado em branco
+siteSettings.user.errors.email=Immettere un indirizzo e-mail valido
+siteSettings.user.errors.password.not.matching=A confirmação da senha não coincide. Insira moedas e tente novamente.
+siteSettings.user.errors.username.exist=já existe
+siteSettings.user.errors.username.mandatory=Especifique um nome de usuário
+siteSettings.user.errors.username.syntax=só caracteres (a..z, A..Z, 0..9, _, -, ., @, '{', '}') para Nome de Usuário são válidos
+siteSettings.user.groupList=Lista de grupos
+siteSettings.user.remove=Remover usuários selecionados
+siteSettings.user.remove.successful=Removido com sucesso
+siteSettings.user.remove.unsuccessful=Impossível remover usuário
