--- a/src/main/resources/resources/JahiaSiteSettings_it.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_it.properties
@@ -16,3 +16,17 @@ siteSettings.locale.mixLanguages=Sostituire il contenuto non convertiti utilizza
 siteSettings.locale.addLanguages=Aggiungi lingue
 siteSettings.locale.availableLanguages=Lingue disponibili
 siteSettings.manageWebProjects.webProject.templateSet=Serie di modelli
+siteSettings.manageUsers=Gestisci utenti
+siteSettings.user.create=Crea nuovo utente
+siteSettings.user.definitivelyRemove=Questo utente sarà definitivamente eliminato dal server.
+siteSettings.user.edit=Modifica/Mostra proprietà utente selezionato
+siteSettings.user.edit.password.no.change=nessuna modifica se campo vuoto
+siteSettings.user.errors.email=Immettere un indirizzo e-mail valido.
+siteSettings.user.errors.password.not.matching=La password di conferma non corrisponde. Reimmetterla.
+siteSettings.user.errors.username.exist=già esistente
+siteSettings.user.errors.username.mandatory=Specificare un nome utente.
+siteSettings.user.errors.username.syntax=per il nome utente sono validi solo caratteri (a..z, A..Z, 0..9, _, -, ., @, '{', '}').
+siteSettings.user.groupList=Elenco gruppi
+siteSettings.user.remove=Rimuovere utenti selezionati
+siteSettings.user.remove.successful=Rimosso.
+siteSettings.user.remove.unsuccessful=Impossibile rimuovere l'utente.
