BACKLOG-5397 : allows to iterate only on first member nodes instead of getting all of them. Don't display size for external groups to avoid getting all nodes.

--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -12,7 +12,8 @@ siteSettings.groups.errors.remove.failed=La suppression du groupe {0} a échoué.
 siteSettings.groups.errors.reservedGroup=Vous ne pouvez pas supprimer ce groupe.
 siteSettings.groups.found=<strong>{0}</strong> groupe(s) trouvés.
 siteSettings.groups.found.limit=Affichage des <strong>{0}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
-siteSettings.groups.members.found=<strong>{0}</strong> membres de groupes trouvés. Affichage des <strong>{1}</strong> premiers.
+siteSettings.groups.members.found=<strong>{0}</strong> membres de groupes trouvés.
+siteSettings.groups.first.shown=Affichage des <strong>{0}</strong> premiers.
 siteSettings.groups.members.showAll=Tout afficher
 siteSettings.groups.members.showAll.notice=Cette opération peut être lente si le groupe contient beaucoup de membres.
 siteSettings.groups.newMembers=Nouveaux membres
