--- a/src/main/resources/resources/JahiaSiteSettings_de.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_de.properties
@@ -12,7 +12,8 @@ siteSettings.groups.errors.remove.failed=Das Löschen der Gruppe {0} ist fehlgesc
 siteSettings.groups.errors.reservedGroup=Sie können diese Gruppe nicht entfernen.
 siteSettings.groups.found=<strong>{0}</strong> Gruppe(n) gefunden.
 siteSettings.groups.found.limit=Die ersten <strong>{0}</strong> werden angezeigt. Verwenden Sie bitte die Suche um die Anzahl der Ergebnisse einzuschränken.
-siteSettings.groups.members.found=<strong>{0}</strong> Gruppenmitglieder gefunden. Die ersten <strong>{1}</strong> werden angezeigt.
+siteSettings.groups.members.found=<strong>{0}</strong> Gruppenmitglieder gefunden.
+siteSettings.groups.first.shown=Die ersten <strong>{1}</strong> werden angezeigt.
 siteSettings.groups.members.showAll=Alle anzeigen
 siteSettings.groups.members.showAll.notice=kann langsam sein im Falle vieler Gruppenmitglieder.
 siteSettings.groups.newMembers=Neue Mitglieder
