--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -12,7 +12,8 @@ siteSettings.groups.errors.remove.failed=Deletion of group {0} failed.
 siteSettings.groups.errors.reservedGroup=You cannot remove that group.
 siteSettings.groups.found=<strong>{0}</strong> group(s) found.
 siteSettings.groups.found.limit=The first <strong>{0}</strong> are shown. Please use the search to limit the number of results.
-siteSettings.groups.members.found=<strong>{0}</strong> group members found. The first <strong>{1}</strong> are shown.
+siteSettings.groups.members.found=<strong>{0}</strong> group members found.
+siteSettings.groups.first.shown=The first <strong>{0}</strong> are shown.
 siteSettings.groups.members.showAll=Show all
 siteSettings.groups.members.showAll.notice=can be slow in case of many group members.
 siteSettings.groups.newMembers=New members
